@@ -5,6 +5,10 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Comparing arrays now works correctly for literals and comparing an array
+   field to an array literal will result in a correct
+   UnsupportedOperationException.
+
  - Support `INSERT ... ON DUPLICATE KEY UPDATE` statement
 
  - Fix: Improved value validation for nested primary key and clustered by
